fix tooltip icon alignment on login page, fixes #5347
Closes #5347

Merge request studip/studip!4275

--- a/resources/assets/stylesheets/scss/index.scss
+++ b/resources/assets/stylesheets/scss/index.scss
@@ -420,6 +420,13 @@ $gap-between-boxes: calc($login-page-margin / 2);
         img {
             vertical-align: middle;
         }
+        .tooltip {
+            vertical-align: middle;
+
+            &::before {
+                --icon-size-default: 24px;
+            }
+        }
     }
 }
 
